# pipefabric

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  nvm_insert.cpp  nvm_scan.cpp  nvm_test.cpp  pfabric.hpp  pfabric_config.h.in  rock_test.cpp
src/bench/: CMakeLists.txt  TopologyBenchmarks.cpp
src/cep/: CEPEngine.hpp  EventBuffer.hpp  Instance.hpp  MatchProducer.hpp  Matcher.cpp  Matcher.hpp  NFAController.hpp  NFAStructure.hpp  StructurePool.hpp
src/cep/dsl/: CEPExpr.hpp  CEPState.hpp
src/cep/edge/: ForwardEdge.hpp  LoopEdge.hpp  NFAEdge.hpp
src/cep/engine/: FirstMatchEngine.hpp  NextMatchEngine.hpp
src/cep/relatedvalue/: RelatedStateValue.hpp  RelatedStateValueMax.hpp  RelatedStateValueMin.hpp  RelatedStateValuePrevious.hpp  RelatedStateValueSum.hpp
src/cep/state/: FinalState.hpp  KleeneState.hpp  NFAState.hpp  NegationState.hpp  NormalState.hpp  StartState.hpp
src/cep/util/: GCStructures.cpp  GCStructures.hpp  Partition.hpp  ThreadPool.hpp  ValueIDMap.hpp  ValueIDMultimap.hpp
src/core/: ElementSerializable.hpp  PFabricTypes.hpp  PTuple.hpp  PTuplePrinter.hpp  Punctuation.cpp  Punctuation.hpp  StreamElementTraits.hpp  TimestampHelper.cpp  TimestampHelper.hpp  Tuple.hpp  TupleFactoryTraits.hpp  TuplePrinter.hpp  TuplePtrFactory.hpp  serialize.hpp
src/core/parser/: AttributeParserBase.hpp  SelectAttributeParser.hpp  StringAttributeParser.hpp  StringRef.hpp  StringRef.hpp.gch  StringRefAttributeParser.hpp  TupleParser.hpp
src/debs2016/: CMakeLists.txt  DEBS2016Defs.hpp  DEBSTest.cpp  README.md  query1.cpp
src/demo/: CMakeLists.txt  RestDemo.cpp  WebServer.hpp
src/dsl/: Dataflow.cpp  Dataflow.hpp  PFabricContext.cpp  PFabricContext.hpp  Pipe.hpp  Topology.cpp  Topology.hpp  TopologyException.hpp
src/libcpp/algorithms/: materializeStringRefs.hpp  splitStringRef.hpp
src/libcpp/mpl/: Forward.hpp  algorithms.hpp  relational.hpp  sequences.hpp
src/libcpp/preprocessor/: MacroEnd.hpp  MakeString.hpp  MakeStrings.hpp
src/libcpp/test_utilities/: TestDataFixtureBase.hpp  TestFixtureException.hpp  test_utilities_config.hpp.in
src/libcpp/types/: types.hpp
src/libcpp/utilities/: BindVariadic.hpp  ConvertTimeDurationToDouble.hpp  DynamicPointerMove.hpp  EnvironmentVariable.hpp  GetTypeName.hpp  PrintCSV.hpp  Timer.hpp  TypePrinter.hpp  exceptions.hpp  utilities.hpp
src/matrix/: BaseMatrix.hpp  DenseMatrix.hpp  Matrix.hpp  ReaderValue.hpp  SparseMatrix.hpp  VectorParser.hpp
src/net/: KafkaSource.cpp  KafkaSource.hpp  MQTTSource.cpp  MQTTSource.hpp  RabbitMQSource.cpp  RabbitMQSource.hpp  ZMQSocket.cpp  ZMQSocket.hpp
src/nvm/: BDCCInfo.hpp  DataNode.hpp  PBPTree.hpp  PBPTree_String.hpp  PString.hpp  PTable.hpp  PTableInfo.cpp  PTableInfo.hpp  PTuple.hpp  ctree_map_persistent.hpp  persistent_table.hpp
src/pubsub/: Flow.hpp  Sink.hpp  SinkHelperMacros.hpp  Source.hpp  SourceHelperMacros.hpp  publish_subscribe.hpp
src/pubsub/channels/: Channel.hpp  ChannelGroup.hpp  ChannelID.hpp  ChannelTraits.hpp  ConnectChannels.hpp  InputChannel.hpp  OutputChannel.hpp  PublisherTraits.hpp  SubscriberTraits.hpp  Subscription.hpp  SubscriptionBase.hpp
src/pubsub/signals/: BoostSignal.hpp  BoostSlot.hpp  DefaultSlotFunction.hpp  DefaultSourceSignal.hpp  OneToManySignal.hpp  OneToOneSignal.hpp  SignalTraits.hpp  StdSlot.hpp  SynchronizedSlot.hpp
src/python/: PyAggregateState.cpp  PyTopology.cpp  PyTopology.hpp
src/qcomp/: CMakeLists.txt  CompilerMain.cpp  Plan.cpp  Plan.hpp  PlanCache.cpp  PlanCache.hpp  QueryCompileException.hpp  QueryCompiler.cpp  QueryCompiler.hpp  SQLParser.cpp  SQLParser.hpp  TopologyBuilder.hpp  TypeManager.cpp  TypeManager.hpp  UniqueNameGenerator.cpp  UniqueNameGenerator.hpp
src/qop/: AggregateFunctions.hpp  AggregateStateBase.hpp  Aggregation.hpp  Barrier.hpp  BaseOp.hpp  BaseOp.hpp.gch  Batcher.hpp  BinaryTransform.hpp  ConsoleWriter.hpp  DataSink.hpp  DataSource.hpp  DefaultElementJoin.hpp  EagerElementJoin.hpp  ElementJoinTraits.hpp  ElementJoinTraits.hpp.gch  FileWriter.hpp  FromMVCCTables.hpp  FromMatrix.hpp  FromTable.hpp  FromTxTables.hpp  GroupedAggregateState.hpp  GroupedAggregation.hpp  JsonExtractor.hpp  Map.hpp  MatrixMerge.hpp  MatrixSlice.hpp  MemorySource.hpp  Merge.hpp  Notify.hpp  OperatorMacros.hpp  PartitionBy.hpp  Queue.hpp  RESTSource.cpp  RESTSource.hpp  SHJoin.hpp  ScaleJoin.hpp  SelectFromMVCCTable.hpp  SelectFromTable.hpp  SelectFromTxTable.hpp  SlidingWindow.hpp  (+21 more)
src/qop/aggr_functions/: AggrAvg.hpp  AggrCount.hpp  AggrDCount.hpp  AggrGlobalMax.hpp  AggrGlobalMin.hpp  AggrIdentity.hpp  AggrLRecent.hpp  AggrMRecent.hpp  AggrMedian.hpp  AggrMinMax.hpp  AggrSum.hpp  AggregateFunc.hpp  AggregateFunc.hpp.gch
src/table/: BDCCInfo.hpp  BDCCPTable.hpp  BOCCTable.hpp  BaseTable.hpp  CuckooTable.hpp  FilterIterator.hpp  HashMapTable.hpp  LDBTable.hpp  LogBuffer.hpp  MVCCTable.hpp  NVMTable.hpp  PBPTreeTable.hpp  RDBTable.hpp  S2PLTable.hpp  StateContext.cpp  StateContext.hpp  Table.hpp  TableException.hpp  TableInfo.cpp  TableInfo.hpp  TxTable.hpp  VTableInfo.cpp  VTableInfo.hpp  persistent_table.hpp
src/test/: AggregateFuncTest.cpp  AggregationTest.cpp  BDCCPTableTest.cpp  BarrierTest.cpp  BenchmarkTest.cpp  CEPDSLTest.cpp  CMakeLists.txt  ChannelGroupTest.cpp  ContextTest.cpp  FlowTest.cpp  FromMatrixTest.cpp  FromTableTest.cpp  GroupedAggregationTest.cpp  HashMapTableTest.cpp  KafkaSourceTest.cpp  LDBTableTest.cpp  MQTTSourceTest.cpp  MapTest.cpp  MatrixSliceTest.cpp  MatrixTest.cpp  MemorySourceTest.cpp  NVMTableTest.cpp  NotifyTest.cpp  PartitionTest.cpp  PyTest.py  QueueTest.cpp  RDBTableTest.cpp  RESTSourceTest.cpp  RabbitMQSourceTest.cpp  RocksDBTest.cpp  SHJoinTest.cpp  SelectChannelParametersTest.cpp  SeqCEPTest.cpp  SignalTest.cpp  SinkTest.cpp  SourceTest.cpp  StreamElementTraitsTest.cpp  StreamGeneratorTest.cpp  StreamMockup.hpp  SynchronizedSlotTest.cpp  (+20 more)
src/test/test_data/: cep_test.in  tuplifier_test1.res  vector_test.in
src/topology/: Dataflow.hpp  PFabricContext.cpp  PFabricContext.hpp  Pipe.hpp  Topology.cpp  Topology.hpp
src/usecases/: CMakeLists.txt
(+228 files in other folders)
